name:                haskell
version:             0.1.0.0
homepage:            https://github.com/culshoefer/twitter-sentiment-world-map
license:             BSD3
license-file:        LICENSE
author:              Anirudh
maintainer:          c@culshoefer.com
copyright:           2017 Anirudh
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Constants
  build-depends:       base >= 4.7 && < 5
                     , twitter-conduit
                     , bytestring
  default-language:    Haskell2010

executable haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell
  default-language:    Haskell2010

test-suite haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/culshoefer/twitter-sentiment-world-map
